# Ayame

./: .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
backend/: config.toml  pyproject.toml
backend/src/ayame/: config.py  generator.py  ingest.py  main.py  models.py  retriever.py  transcribe.py  vram.py
backend/src/ayame/api/: app.py  routes.py  schemas.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
src/ayame/: config.py  generator.py  main.py  models.py  retriever.py
