[project]
name = "ayame"
version = "0.1.0"
description = "Local RAG for university lecture materials"
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.24.0",
  "chromadb>=0.5.0",
  "ollama>=0.3.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "loguru>=0.7.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1.0",
]

[project.scripts]
ayame = "ayame.main:app"
ayame-server = "ayame.api.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ayame"]
